--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "disinfect": "^0.2.1",
     "hapi": "16.1.0",
     "joi": "10.2.2",
     "meteor-node-stubs": "~0.2.4",
